# openai-compatible-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  README.zh-CN.md  capture_demo.py  demo.html  index.html  publish.bat  publish.sh  pyproject.toml
.github/workflows/: pages.yml
contest/: proposal.html  register-post.md  wechat-article.html
docs/: index.html
docs/contest/: demo-post.md
examples/: cursor_mcp.json  openai_config.json
setup/: README.md  claude-launch.cmd  claude-launch.sh  index.html  install-oneclick.bat  install.bat  install.sh  proxy-launch.cmd  proxy-launch.sh  server.py
src/openai_compatible_mcp/: __init__.py  __main__.py  client.py  proxy_server.py  server.py  wizard.py  wizard_index.html
tests/: smoke_test.py  test_unit.py
