[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-compatible-mcp"
version = "0.2.19"
description = "MCP server that bridges to any OpenAI-compatible chat API (DeepSeek, OpenAI, Azure, local llama.cpp, etc.)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "openai-compatible-mcp contributors" }]
keywords = ["mcp", "model-context-protocol", "openai", "deepseek", "llm", "chat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
openai-compatible-mcp = "openai_compatible_mcp.__main__:main"
openai-compatible-mcp-proxy = "openai_compatible_mcp.proxy_server:main"

[project.urls]
"Source" = "https://github.com/xiaobaotalks/openai-compatible-mcp"
"Issues" = "https://github.com/xiaobaotalks/openai-compatible-mcp/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"openai_compatible_mcp" = ["wizard_index.html"]
